--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,22 @@ compile_commands.json
 # Flags for Clang Code Model
 *.cxxflags
 *.cflags
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+### CMake Patch ###
+CMakeUserPresets.json
+
+# External projects
+*-prefix/
